# Intelligent-QT-Vedio-Player

./: CMakeLists.txt  README.md  adjustSize.cc  main.cpp  player.cpp  player.h  setup.cc  signalConnectSlot.cc  slots.cc
LearningNote/: media1.cc
